# lead-ia

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.cursor/rules/: git-workflow.mdc
.github/: pull_request_template.md
.github/prompts/: llm-review-prompt.txt
.github/workflows/: ci.yml  llm-review.yml
ai_worker/: Dockerfile  activities.py  agent_graph.py  db.py  dspy_engine.py  llm_router.py  observability.py  pipeline.py  worker.py  workflows.py
ai_worker/tests/: test_activities.py  test_agent_graph.py  test_dspy_generate_email.py  test_llm_router.py  test_parity.py  test_pipeline.py  test_workflow.py
api_gateway/: Dockerfile  config.py  db.py  main.py  rate_limit.py  temporal.py
api_gateway/routes/: approve.py  config.py  export.py  leads.py  status.py
api_gateway/tests/: test_approve.py  test_config.py  test_config_endpoint.py  test_export.py  test_rate_limit.py  test_search.py  test_status.py
context/: ai-workflow-rules.md  architecture.md  code-standards.md  progress-tracker.md  project-overview.md  ui-context.md
docs/: branch-protection.md  cost-guardrails.md  evals-backlog.md  model-choices.md  roadmap.md  twelve-factor-audit.md
evals/: README.md  dspy_eval.py  promptfooconfig.yaml
frontend/: AGENTS.md  CLAUDE.md  package-lock.json  package.json  vitest.config.ts
maps_bridge/: Dockerfile  cache.py  config.py  errors.py  provider_factory.py  server.py
scripts/: README.md  record_fixtures.py
shared/: db.py  schemas.py
tests/: test_eval_metrics.py  test_redaction.py
website_bridge/: Dockerfile  cache.py  config.py  errors.py  extract.py  provider_factory.py  server.py
(+133 files in other folders)
