[project]
name = "lead-forge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.6",
    "pydantic-settings",
    "temporalio",
    "dspy-ai",
    "langgraph",
    "langfuse",
    "fastmcp",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "vcrpy",
]

[tool.uv]
package = false

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
