[project]
name = "lead-forge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.6",
    "pydantic-settings",
    "temporalio",
    "dspy-ai",
    "langgraph",
    "langfuse",
    "fastmcp",
    "httpx>=0.27",
    "tenacity>=8.2",
    "openinference-instrumentation-dspy>=0.1.37",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "vcrpy",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
